--- a/index.html
+++ b/index.html
@@ -2,22 +2,60 @@
 <html>
     <head>
         <title>A GIRL CAN DREAM</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+        <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script
+        src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+
       <link href="styles.css" rel= "stylesheet" type="text/css">
     </head>
     <body>
-   <header>
-     <div class="row">
-       <ul class="main-nav">
-         <li class="active"><a href="#">HOME</a></li>
-          <li><a href="#">CLOTHES</a></li>
-           <li><a href="#">SHOES</a></li>
-            <li><a href="#">FAQ</a></li>
-       </ul>
+   <sector class="header">
+     <nav class="navbar navbar-expand-lg navbar-light">
+  <a class="navbar-brand" href="#"><img src="images.jpg"> </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+          <a class="nav-link" href="#">HOME</a>
+        </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">PROFESSIONAL</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">CASUAL</a>
+      </li>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">FAQ</a>
 
-     </div>
-     <div class="text">
-     <h1>THE DREAM CLOSET!</h1>
-     </div>
-   </header>
+    </ul>
+  </div>
+</nav>
+<div class="background">
+  <div class="background-image">
+    <img src="https://images.pexels.com/photos/135620/pexels-photo-135620.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
+</div>
+</sector>
+
+     <div class="background-title">
+      <h1>WELCOME!</h1>
+       </div>
+
+
+
+   <footer>
+
+
+
+
+   </footer>
     </body>
 </html>
