--- a/index.html
+++ b/index.html
@@ -17,37 +17,45 @@
     <body>
    <sector class="header">
      <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand" href="#"><img src="images.jpg"> </a>
+  <a class="navbar-brand" href="#"><img src="logo_transparent.png"> </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-          <a class="nav-link" href="#">HOME</a>
+          <a class="nav-link" href="#">HOME<span class"sr-only":></span></a>
         </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">PROFESSIONAL</a>
+        <a class="nav-link" href="Professional.html">PROFESSIONAL</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">CASUAL</a>
+        <a class="nav-link" href="Casual.html">CASUAL</a>
       </li>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">FAQ</a>
+      <a class="nav-link" href="FAQ.html">FAQ</a>
 
     </ul>
   </div>
 </nav>
+<div class="homepage-title">
+  <div class="words">
+  <h1>A Girl Can Dream!</h1>
+
+</div>
 <div class="background">
   <div class="background-image">
-    <img src="https://images.pexels.com/photos/135620/pexels-photo-135620.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
+  <p>  <img src="https://images.pexels.com/photos/952214/pexels-photo-952214.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
+Hello Ladies!
+Here you will find the best outfit inspirations, and yes! I mean the best.
+We have everything from a professional look to business professional,
+ from casual to smart casual and among others....</p>
 </div>
+
 </sector>
 
-     <div class="background-title">
-      <h1>WELCOME!</h1>
-       </div>
+
 
 
 
