added navbar and first paragraph

--- a/Professional.html
+++ b/Professional.html
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Webpage</title>
+        <title>PROFESSIONAL OUTFITS</title>
+        <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script
+        src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+
+      <link href="styles.css" rel= "stylesheet" type="text/css">
     </head>
     <body>
-        Hello, world!
+      <sector class="header">
+        <nav class="navbar navbar-expand-lg navbar-light">
+     <a class="navbar-brand" href="#"><img src="logo_transparent.png"> </a>
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarNav">
+       <ul class="navbar-nav">
+         <li class="nav-item">
+             <a class="nav-link" href="index.html">HOME<span class"sr-only":></span></a>
+           </li>
+       <li class="nav-item">
+           <a class="nav-link" href="Professional.html">PROFESSIONAL</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="Casual.html">CASUAL</a>
+         </li>
+       </li>
+       <li class="nav-item">
+         <a class="nav-link" href="FAQ.html">FAQ</a>
+
+       </ul>
+     </div>
+     </nav>
+   </sector>
+        <div class="top">
+            <p>
+            There are various categories of professional women's clothes:
+          <ol>
+            <li> Business Formal  </li>
+            <li>Business Professional</li>
+            <li>Business Casual</li>
+            <li>Casual</li>
+          </ol>
+
+          Skirt or slacks? Tights or bare legs? Sandals or pumps?
+          These are the questions you might find yourself asking each morning as you select work attire.
+          And, depending on the dress code your company enforces,
+         you could be spot on – or woefully off-base in your fashion choices.
+        </p>
+        </div>
     </body>
 </html>
