added no changes

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 </div>
 <div class="background">
   <div class="background-image">
-  <p>  <img src="https://images.pexels.com/photos/952214/pexels-photo-952214.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
-Hello Ladies!
+  <img src="https://images.pexels.com/photos/952214/pexels-photo-952214.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
+<p>Hello Ladies!
 Here you will find the best outfit inspirations, and yes! I mean the best.
 We have everything from a professional look to business professional,
  from casual to smart casual and among others....</p>
