--- a/Professional.html
+++ b/Professional.html
@@ -34,12 +34,13 @@
          </li>
        </li>
        <li class="nav-item">
-         <a class="nav-link" href="FAQ.html">FAQ</a>
+         <a class="nav-link" href="DREAM-CLOSET.html">DREAM CLOSET</a>
 
        </ul>
      </div>
      </nav>
-   </sector>
+</sector>
+<sector id="bodybox">
    <div class="alert alert-success" role="alert">
   <h1 class="alert-heading">Well!Well!Well!</h1>
   Skirt or slacks? Tights or bare legs? Sandals or pumps?
@@ -121,10 +122,17 @@
   <div class="casual-image">
     <img src="https://i.pinimg.com/236x/88/d2/32/88d232f32fd371c7c334d0cccc7945d0.jpg"
     alt="buscasual"class="img-fluid float-right">
+</div>
+</sector>
+
+<footer id="footer">
+
+
+by Mitchell Wachera Maina.
 
 
 
-
+</footer>
 
     </body>
 </html>
