--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </li>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="FAQ.html">FAQ</a>
+      <a class="nav-link" href="DREAM-CLOSET.html">DREAM CLOSET</a>
 
     </ul>
   </div>
@@ -59,9 +59,9 @@ We have everything from a professional look to business professional,
 
 
 
-   <footer>
+   <footer id="footer">
 
-
+by Mitchell Wachera Maina.
 
 
    </footer>
