added to catrgories title

--- a/Casual.html
+++ b/Casual.html
@@ -63,7 +63,7 @@ you can wear whatever you want however you want.Below is a table on examples of 
    </table>
 
 
-<p class="paragraphcasual">Here I will divide the Clothes into two categories: Winter and Summer Clothes.</p>
+<p class="paragraphcasual">Here I will divide the Clothes into two categories: Winter,Spring, Fall and Summer Clothes.</p>
 <ul class="aboutlist">
 <h1>Winter Fashion Tips</h1>
 <p>Winter is a tricky season in the fashion world.When you’re busy worrying about braving the elements and staying warm,
